plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.3'
}

mainClassName = 'me.melijn.jda.Melijn'
version = '1.2'
sourceCompatibility = 10

repositories {
    jcenter()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}

dependencies {
    compile('net.dv8tion:JDA:3.8.1_454') {
        exclude module: 'opus-java'
    }
    compile 'com.sedmelluq:lavaplayer:1.3.10'
    compile 'com.github.FredBoat:Lavalink-Client:1a4b0f5'

    //https://search.maven.org/artifact/com.zaxxer/HikariCP
    compile 'com.zaxxer:HikariCP:3.3.0'
    
    //https://mvnrepository.com/artifact/org.codehaus.janino/janino
    compile 'org.codehaus.janino:janino:3.0.11'
    compile 'org.codehaus.janino:commons-compiler:3.0.11'
    
    //https://bintray.com/duncte123/weeb.java/weeb.java
    compile 'me.duncte123:weebJava:2.2.0_18'

    //https://mvnrepository.com/artifact/mysql/mysql-connector-java
    compile 'mysql:mysql-connector-java:8.0.13'

    //https://jitpack.io/#DiscordBotList/DBL-Java-Library
    compile 'com.github.DiscordBotList:DBL-Java-Library:2.0.1'

    //https://mvnrepository.com/artifact/se.michaelthelin.spotify/spotify-web-api-java
    compile 'se.michaelthelin.spotify:spotify-web-api-java:2.1.2'

    //https://mvnrepository.com/artifact/com.google.guava/guava
    compile 'com.google.guava:guava:27.0.1-jre'

    //https://mvnrepository.com/artifact/ch.qos.logback/logback-core
    compile 'ch.qos.logback:logback-core:1.2.3'

    //https://mvnrepository.com/artifact/org.jooby/jooby
    compile 'org.jooby:jooby-netty:1.5.1'
    compile 'org.jooby:jooby-jackson:1.5.1'

    //https://mvnrepository.com/artifact/com.google.apis/google-api-services-youtube
    compile 'com.google.apis:google-api-services-youtube:v3-rev206-1.25.0'
}

compileJava.options.encoding = 'UTF-8'
